--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CatedraDSM</string>
+    <string name="cita_titulo">Agendar una Cita</string>
+    <string name="cita_paciente">Nombre Completo</string>
+    <string name="cita_sucursal">Sucursal</string>
+    <string name="cita_estilista">Seleccione un estilista</string>
+    <string name="cita_fecha">Fecha de la cita</string>
+    <string name="cita_hora">Hora de la cita</string>
 </resources>
